# byoo

./: .gitignore  Cargo.toml  README.md
benches/: agg_bench.rs  join_bench.rs
frontend/: bin.rs
python/: byoo_operator.py  main.py  operators.json  predicate.py  util.py
python/grammer/: predicate.g4  predicate.interp  predicate.tokens  predicateLexer.interp  predicateLexer.py  predicateListener.py  predicateParser.py
res/: Makefile  generate_agg_csvs.py  generate_csvs.py
res/inputs/: agg_test.csv  test1.csv  test2.csv
res/inputs/imdb/: imdb_keyword.csv.xz  imdb_title.csv.xz
res/plans/: imdb_keyword.json  imdb_movie_keyword.json  imdb_title.json
src/: columnar_scan.rs  data.rs  file_scan.rs  file_scan.rs~  hash_partition_store.rs  lib.rs  operator_buffer.rs  operator_buffer.rs~  row_buffer.rs  spillable_store.rs
src/agg/: average.rs  count.rs  max.rs  min.rs  mod.rs  sum.rs
src/compile/: mod.rs
src/operator/: column_union.rs  filter.rs  mod.rs  project.rs  sort.rs
src/operator/groupby/: all_cols_groupby.rs  all_rows_groupby.rs  hashed_groupby.rs  mod.rs  sorted_groupby.rs
src/operator/join/: hash_join.rs  loop_join.rs  merge_join.rs  mod.rs
src/operator/output/: columnar_output.rs  csv_output.rs  mod.rs
src/operator/scan/: columnar_scan.rs  csv_scan.rs  mod.rs
src/predicate/: mod.rs
tests/: agg_tests.rs  compile_tests.rs  imdb_tests.rs  join_tests.rs  storage_tests.rs
